--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon src/index.js --exec babel-node"
+    "dev": "nodemon src/index.js --exec babel-node"
   },
   "repository": {
     "type": "git",
@@ -18,16 +18,24 @@
   },
   "homepage": "https://github.com/pabloencina/acamica-data-warehouse-backend#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-jwt": "^6.1.0",
+    "express-rate-limit": "^6.2.0",
+    "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   }
 }
