--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pabloencina/acamica-data-warehouse-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "compression": "^1.7.4",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
