--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/pabloencina/acamica-data-warehouse-backend#readme",
   "dependencies": {
+    "axios": "^0.26.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
     "express": "^4.17.2",
