--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-jwt": "^6.1.0",
