--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.js --exec babel-node"
   },
   "engines": {
-    "node":"16.18.1",
+    "node": "16.18.1",
     "npm": "8.19.2"
   },
   "repository": {
@@ -43,6 +43,7 @@
     "@babel/core": "^7.16.12",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "eslint": "^8.27.0",
     "nodemon": "^2.0.15",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
