--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT="3500"
 MONGO_URL="mongodb://localhost:27017"
 DB_NAME="datawarehouse"
+JWT_SECRET="ponerAlgoSuperComplicadoConNumuerosYCaracteres1234"
