--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - MONGO_URL=$MONGO_URL
       - DB_NAME=$DB_NAME
       - JWT_SECRET=$JWT_SECRET
+    depends_on:
+      - mongo
   mongo:
     image: mongo:6.0.2
     container_name: mongo
